--- a/nike.html
+++ b/nike.html
@@ -22,8 +22,206 @@
             </div>
             <div></div>
         </div>
-            
-        <div class="right">right</div>
+
+        <div class="right"><input type="text" placeholder="Search..." class="search_bar">
+        <img src="heart.jpg" alt="heart_logo" target="_blank" class="heart_logo">
+        <img src="bag.png" alt="bag_logo" target="_blank" class="bag_logo"> </div>
     </sectio>
+    <section class="center_part">
+        <div class="div1">
+            <p>New Styles On Sale: Up to 40% Off</p>
+            <a href="https://www.nike.com/in/w/sale-3yaep" style="color: black;">Shop all our New Mark</a>
+        </div>
+        <div>
+            <a href="https://www.nike.com/in/w/mens-jordan-shoes-37eefznik1zy7ok"><img src="dunks.webp" alt="dunks" target="_balnk" class="dunks_pic"></a>
+        </div>
+        <div>
+            <a href="https://www.nike.com/in/w/national-team-football-1gdj0zav9de" style="color: black; text-decoration: none;"><h1 class="heading1">
+                THE 2023 NIKE NATIONAL TEAM KITS & COLLECTIONS</h1>
+            </a>
+        </div>
+        <div style="font-weight:400; font-family: sans-serif;"><a href="https://www.nike.com/in/w/national-team-football-1gdj0zav9de" style="color: black; text-decoration: none;">
+            <p style="text-align: center; margin-bottom: 0%;">Team pride has never looked so fresh. Show the world the future of football looks like in the  2023 Nike NationaL Team Kit & Collections:
+                <p style="text-align: center;margin-bottom: 10px; margin-top: 8px;">sleek,everyday takes on tradition that celebrates a new era of champions.</p>
+                <p style="text-align: center; margin-top: 0%;">shop your team today</p>
+            </p>
+        </a>
+        </div>
+        <a href="https://www.nike.com/in/w/national-team-football-1gdj0zav9de" style="color: black; text-decoration: none;">
+            <div class="container">
+                <div class="center">
+                  <button class="shop">Shop</button>
+                </div>
+            </div>
+        </a>
+        <div style="margin-left: 50px;"><p style="font-size: 25px; font-family: sans-serif;">
+            Gear Up
+        </p></div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/phantom-gx-club-dynamic-fit-mg-multi-ground-football-boot-24PQkr/DD9482-446"  style="color: black; text-decoration: none;"><img src="dunk1.webp" alt="dunk1" target="blank" class="dunk1">
+            <div class="dunk-info">
+                <P class="dunk-title">Nike Phantom GX Club Dynamic Fit MG</P>
+                <p class="dunk-price">&#8377 6 495</p>
+            </div>
+            <p class="dunk-model">
+                Multi-ground Football Boots
+            </p></a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/gripknit-phantom-gx-elite-fg-football-boot-6t4Xff/DC9968-705"  style="color: black; text-decoration: none;"><img src="dunk2.webp" alt="dunk2" target="blank" class="dunk1">
+            <div class="dunk-info">
+                <P class="dunk-title">Nike Gripknit Phantom GX Elite FG</P>
+                <p class="dunk-price">&#8377 21 995</p>
+            </div>
+            <p class="dunk-model">
+                Firm-ground Football Boot
+            </p></a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/phantom-gx-club-tf-football-shoes-K2rSnK/DD9486-010"  style="color: black; text-decoration: none;"><img src="dunk3.webp" alt="dunk3" target="blank" class="dunk1">
+            <div class="dunk-info">
+                <P class="dunk-title">Nike Phantom GX Club TF</P>
+                <p class="dunk-price">&#8377 5 495</p>
+            </div>
+            <p class="dunk-model">
+                Turf Football shoes
+            </p></a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/tiempo-legend-9-academy-tf-football-shoe-FT9Mcp/DA1191-705"  style="color: black; text-decoration: none;"><img src="dunk4.webp" alt="dunk4" target="blank" class="dunk1">
+            <div class="dunk-info">
+                <P class="dunk-title">Nike Phantom GX Club TF</P>
+                <p class="dunk-price">&#8377 5 495</p>
+            </div>
+            <p class="dunk-model">
+                Turf Football shoes
+            </p></a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/zoom-mercurial-superfly-9-elite-xxv-fg-football-boot-RxNPgm/FB8397-060"  style="color: black; text-decoration: none;"><img src="dunk5.webp" alt="dunk5" target="blank" class="dunk1">
+            <div class="dunk-info">
+                <P class="dunk-title">Nike Phantom GX Club TF</P>
+                <p class="dunk-price">&#8377 5 495</p>
+            </div>
+            <p class="dunk-model">
+                Turf Football shoes
+            </p></a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/mercurial-superfly-9-club-mg-multi-ground-football-boot-PwHVpF/DJ5961-146"  style="color: black; text-decoration: none;"><img src="dunk6.webp" alt="dunk6" target="blank" class="dunk1">
+            <div class="dunk-info">
+                <P class="dunk-title">Nike Phantom GX Club TF</P>
+                <p class="dunk-price">&#8377 5 495</p>
+            </div>
+            <p class="dunk-model">
+                Turf Football shoes
+            </p></a>
+        </div>
+        <div style="margin-left: 50px;"><p style="font-size: 25px; font-family: sans-serif;">
+            The Latest
+        </p></div>
+        <div>
+            <a href="https://www.nike.com/in/w/summer-shop-shoes-2etw7zy7ok"><img src="latest.webp" alt="latest" target="_balnk" style="width: 1475px; height: 1000px; margin-left: 10px;"></a>
+        </div>
+        <div>
+            <a href="https://www.nike.com/in/w/national-team-football-1gdj0zav9de" style="color: black; text-decoration: none;">
+                <p style="margin-top: 50px; text-align: center; font-family: sans-serif; font-size: 15px; margin-bottom: 0px;">Summer Kicks</p>
+                <h1 class="heading2">
+                STEP INTO SUMMER STYLE</h1>
+            </a>
+        </div>
+        <div style="font-weight:400; font-family: sans-serif;"><a href="https://www.nike.com/in/w/summer-shop-shoes-2etw7zy7ok" style="color: black; text-decoration: none;">
+            <p style="text-align: center;">For days when you need fresh kicks that keep up with your every move. #ChaseTheDay</p>
+        </a>
+        </div>
+        <a href="https://www.nike.com/in/w/summer-shop-2etw7" style="color: black; text-decoration: none;">
+            <div class="container">
+                <div class="center">
+                  <button class="shop_kicks">Shop kicks</button>
+                  <button class="shop_summer">Shop Summer Styles</button>
+                </div>
+            </div>
+        </a>
+        <div style="margin-left: 50px;"><p style="font-size: 25px; font-family: sans-serif;">
+            Tees to Own Summer
+        </p></div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/life-woven-military-short-sleeve-button-down-shirt-4hD9x8/DX3341-386"  style="color: black; text-decoration: none;"><img src="shirt1.webp" alt="image1" target="blank" class="shirt1">
+                <div class="dunk-info">
+                    <P class="item-title">Nike Life</P>
+                    <p class="item-price">&#8377 4 995</p>
+                </div>
+                <p class="item-info">Men's Woven Military Short-Sleeve Button-Down Shirt</p></div>
+            </a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/sportswear-everyday-modern-woven-short-sleeve-top-hRTvkd/DV7931-133"  style="color: black; text-decoration: none;"><img src="shirt2.webp" alt="image1" target="blank" class="shirt1">
+                <div class="dunk-info">
+                    <P class="item-title">Nike Sportswear Everyday Modern</P>
+                    <p class="item-price">&#8377 3 995</p>
+                </div>
+                <p class="item-info">Women's Woven Short-Sleeve Top</p></div>
+            </a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/acg-short-sleeve-t-shirt-9sHcl3/DJ3643-885"  style="color: black; text-decoration: none;"><img src="shirt3.webp" alt="image1" target="blank" class="shirt1">
+                <div class="dunk-info">
+                    <P class="item-title">Nike ACG</P>
+                    <p class="item-price">&#8377 2 195</p>
+                </div>
+                <p class="item-info">Men's Short-Sleeve T-Shirt</p></div>
+            </a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/dri-fit-training-t-shirt-Z4QPf1/FJ5271-717"  style="color: black; text-decoration: none;"><img src="shirt4.webp" alt="image1" target="blank" class="shirt1">
+                <div class="dunk-info">
+                    <P class="item-title">Nike Dri-FIT</P>
+                    <p class="item-price">&#8377 1 995</p>
+                </div>
+                <p class="item-info">Men's Training T-Shirt</p></div>
+            </a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/sportswear-collection-over-oversized-top-jn5HkB/DV8318-363"  style="color: black; text-decoration: none;"><img src="shirt5.webp" alt="image1" target="blank" class="shirt1">
+                <div class="dunk-info">
+                    <P class="item-title">Nike Sportswear Collection</P>
+                    <p class="item-price">&#8377 2 995</p>
+                </div>
+                <p class="item-info">Women's Over-Oversized Top</p></div>
+            </a>
+        </div>
+        <div class="div2">
+            <a href="https://www.nike.com/in/t/dri-fit-one-older-training-top-N8d5Wm/FB1098-815"  style="color: black; text-decoration: none;"><img src="shirt6.webp" alt="image1" target="blank" class="shirt1">
+                <div class="dunk-info">
+                    <P class="item-title">Nike Dri-FIT One</P>
+                    <p class="item-price">&#8377 1 795</p>
+                </div>
+                <p class="item-info">Older Kid's(Girl's) Training Top</p></div>
+            </a>
+        </div>
+        <div style="margin-left: 50px;"><p style="font-size: 25px; font-family: sans-serif;">
+            Don't Miss
+        </p></div>
+        <div>
+            <a href="https://www.nike.com/in/w/running-shoes-37v7jzy7ok"><img src="miss.webp" alt="latest" target="_balnk" style="width: 1420px; height: 800px; margin-left: 40px; margin-bottom: 50px;"></a>
+        </div>
+        <div>
+            <a href="https://www.nike.com/in/w/national-team-football-1gdj0zav9de" style="color: black; text-decoration: none;">
+                <h1 class="heading2">
+                NIKE INVINCIBLE 3</h1>
+            </a>
+        </div>
+        <div style="font-weight:400; font-family: sans-serif;"><a href="https://www.nike.com/in/w/summer-shop-shoes-2etw7zy7ok" style="color: black; text-decoration: none;">
+            <p style="text-align: center;">All the cushion.All the feels</p>
+        </a>
+        </div>
+        <a href="https://www.nike.com/in/w/running-shoes-37v7jzy7ok" style="color: black; text-decoration: none;">
+            <div class="container">
+                <div class="center">
+                  <button class="shop">Shop</button>
+                </div>
+            </div>
+        </a>
+    </section>
 </body>
 </html>
